@@ -135,6 +135,9 @@ Other changes:
 * A "package" mapper type has been added to allow package directory
   names replaced with the dotted form.
   
+* you can now specify environment variables in the <java> task 
+  if the fork attribute has been set to true.
+
 Changes from Ant 1.4 to Ant 1.4.1
 ===========================================
 
